# cs207-FinalProject

./: .coverage  .gitignore  .travis.yml  Dual functions testing-Lauren.ipynb  DualNumber.py  LICENSE.rtf  README.md  Untitled.ipynb  demo.ipynb  milestone1.ipynb  newtons_method.ipynb  newtons_method_test.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.cache/v/cache/: lastfailed
docs/: Documentation.ipynb  Makefile  Milestone1_Lauren.ipynb  background.rst  examples.rst  future.rst  howtouse.rst  implementation.rst  introduction.rst  milestone1.ipynb  milestone2.ipynb  organization.rst
docs/source/: conf.py  examples.rst  future.rst  howtouse.rst  index.rst
source/: modules.rst  spacejam.rst
spacejam/: .coverage  Dual.py  Jacobian.py  README.md  __init__.py  autodiff.py  dual.py  init.py  pyproject.toml  requirements.txt  setup.py
spacejam/docs/: background.rst  examples.rst  future.rst  howtouse.rst  implementation.rst  introduction.rst  organization.rst
spacejam/docs/source/: conf.py  index.rst
spacejam/notebooks/: demo.ipynb
spacejam/spacejam/: .coverage  __init__.py  autodiff.py  dual.py  integrators.py
spacejam/spacejam/test/: .coverage  test_autodiff.py  test_dual.py  test_integrators.py
spacejam/tests/: .coverage  Demo.ipynb  DualNumbers_test.py  dualnumbers_test.py  init.py  test_dual.py
test/: test_autodiff.py  test_integrators.py
