[tool.poetry]
name = "spacejam"
version = "1.0.0"
description = "for automatic differentiation and other looney things"
authors = ["Ian Weaver <iweaver@mailbox.org>, Sherif Gerges <>, Lauren Yoo <>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
