[tool.poetry]
name = "spacejam"
version = "1.1.0"
description = ""
authors = ["Ian Weaver <iweaver@mailbox.org>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
ipython = "^7.30.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39",]
